Corrected big data image and spacing

--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -6345,7 +6345,7 @@ ul.sidebar-nav ul.submenu li:first-child a {
   color: #09357a;
 }
 .blog .featured-video,
-.blog .featured-image {
+.featured-image {
   margin-bottom: 20px;
 }
 .blog .featured-image img {
